2007-04-05  Jackson Harper  <jackson@ximian.com>

	* TextControl.cs: Move around the line endings when crossing line
	boundaries.
	- When combining lines, strip the ending text off the first line.

2007-04-05  Jackson Harper  <jackson@ximian.com>

	* TextControl.cs:
	* TextBoxBase.cs: Try to never move the cursor into the line
	ending.
	
2007-04-04  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripItem.cs: Make sure we aren't firing mouse events when
	the item is disabled.  Also add a few missing methods.

2007-04-04  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: We don't need the MouseEnter/MouseLeave check
	to fire just one MouseHover event when HoverSelection is true, since
	.Net does fire more than one MouseHover event in that scenario. Also,
	fix the selection in HoverSelection, by invoking UpdateMultiSelect
	if MultiSelect is true, instead of only setting ListViewItem.Selected.
	Finally, we need to reset the Hover logic in MouseMove, even when we
	don't have a selected item.

2007-04-04  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStrip.cs: Add several missing methods, properties, and events.

2007-04-04  Chris Toshok  <toshok@ximian.com>

	* DataGridTextBoxColumn.cs: set the bounds of the text box to
	(0,0,0,0) in Commit, as MS does.

	* DataGrid.cs: call EndEdit() from Select() as microsoft does, and
	make sure we set CurrentRow on a row header click *before* calling
	Select.  This moves the current cell (and the textbox) to the new
	row.  The call to Select then hides the textbox, giving us the
	correct behavior.  Fixes #80362.

	* CurrencyManager.cs (UpdateIsBinding): raise ItemChanged (-1).
	(ListChangedHandler): reorder the position/current changed events,
	and call UpdateIsBinding in the ItemAdded case.

	* GridColumnStylesCollection.cs: add some columns events, one of
	which raises the CollectionChanged event.

2007-04-04  Jackson Harper  <jackson@ximian.com>

	* TextControl.cs: When we delete multiple selection lines